tests/invalid/runtime/div_zero_int.pts
import Io;

function main() : void {
    int a = 1;
    int b = 0;
    int c = a / b;
    Io.printLine(c.toString());
}
